# booking_scraper

./: .gitignore  README.md  Requirements.txt  docker-compose.yml  dockerfile  dockerfile_debian  pyproject.toml  requirements.txt
.github/workflows/: selenium.yml
app/database/: DF_Cliente.xlsx  DF_Competencia.xlsx  DF_Daily_Tracking.xlsx  DF_Hotel_list.xlsx  Parametros 21-03.xlsx  Parametros.xlsx
app/scraping_results/Clientes/: 2024-11-08.csv  2024-11-09.csv  2024-11-10.csv  2024-11-11.csv  2024-11-12.csv  2024-11-13.csv  2024-11-14.csv  2024-11-14_to_2024-11-16.csv  2024-11-20.csv  2024-11-22.csv  2024-11-25.csv  2024-11-26.csv  2024-11-29.csv  2024-12-01.csv  2024-12-02.csv  2024-12-06.csv  2024-12-09.csv  2024-12-10.csv  2024-12-11.csv  2024-12-16.csv  2024-12-17.csv  2024-12-18.csv  2024-12-19.csv  2025-01-18.csv  2025-01-20.csv  2025-01-21.csv  2025-01-22.csv  2025-01-24.csv  2025-01-26.csv  2025-01-31.csv  2025-02-03.csv  2025-02-04.csv  2025-02-05.csv  2025-02-09.csv  2025-02-11.csv  2025-02-14.csv  2025-02-15.csv  2025-02-17.csv  2025-02-19.csv  2025-03-11.csv  (+16 more)
app/scraping_results/Clientes_Adhoc/: 2024-11-22_to_2024-11-24.csv  2024-11-23_to_2024-11-25.csv  2024-11-27_to_2024-11-29.csv  2024-12-01_to_2024-12-03.csv  2024-12-02_to_2024-12-04.csv  2024-12-06_to_2024-12-09.csv  2024-12-10_to_2024-12-12.csv  (+36 more)
app/src/: Menu.py  Update_DF.py  Web_Scraping_Clientes.py  Web_Scraping_Clientes_Adhoc.py  Web_Scraping_Competencia.py  Web_Scraping_Competencia_Adhoc.py  Web_Scraping_Daily_Tracking.py  Web_Scryping_Booking.py  enviar_sheets_clientes_diario.py  main.py
(+115 files in other folders)
